# autonovel

./: .agent-launcher.env.example  .env.example  .gitignore  AGENTS.md  ANTI-PATTERNS.md  PIPELINE.md  README.md  WORKFLOW.md  adversarial_edit.py  api_config.py  audiobook_voices.json  build_arc_summary.py  build_outline.py  compare_chapters.py  draft_chapter.py  evaluate.py  gen_art.py  gen_art_directions.py  gen_audiobook.py  gen_audiobook_script.py  gen_brief.py  gen_canon.py  gen_characters.py  gen_cover_composite.py  gen_cover_print.py  gen_outline.py  gen_outline_part2.py  gen_revision.py  gen_world.py  main.py  program.md  project_config.py  pyproject.toml  reader_panel.py  review.py  run_drafts.py  run_pipeline.py  seed.py  voice.md  voice_fingerprint.py
landing/: index.html
scripts/: launch-agent.sh
typeset/: build_tex.py  epub_style.css  novel.tex
